# pinnochio

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  TESTING.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
pinnochio/: __main__.py  config.py  core.py
tests/: test_core.py  test_pinnochio.py
